2008-04-18  Adam Roben  <aroben@apple.com>

        Windows build fix

        Same as before, but for fabs/fabsf.

        * svg/SVGAnimateTransformElement.cpp:
        (WebCore::SVGAnimateTransformElement::calculateDistance): Changed to
        use fabsf and removed narrowPrecisionToFloat.

2008-04-18  Adam Roben  <aroben@apple.com>

        Windows build fix

        In MSVC, sqrt() has three overloads: float, double, and long
        double. In GCC, sqrt() is only for doubles. Both MSVC and GCC have
        sqrtf() to operate explicitly on floats.

        * svg/SVGAnimateMotionElement.cpp:
        (WebCore::SVGAnimateMotionElement::calculateDistance): Changed to use
        sqrtf and removed narrowPrecisionToFloat.
        * svg/SVGAnimateTransformElement.cpp:
        (WebCore::SVGAnimateTransformElement::calculateDistance): Ditto.

2008-04-18  Simon Hausmann  <hausmann@webkit.org>

        Fix the build without Database support (fixes the Qt/win build).

        * page/PageGroup.cpp:
        (WebCore::PageGroup::localStorage):

2008-04-18  Simon Hausmann  <hausmann@webkit.org>

        Fix the Gtk build on the build bot.

        * GNUmakefile.am: Back out the previous LocalStorage, etc. additions
        as they're already listed in another sources group that wasn't used
        due to a local configure error.

2008-04-18  Simon Hausmann  <hausmann@webkit.org>

        Prospective wx build fix.

        * webcore-base.bkl: Add loader/appcache to include paths.

2008-04-18  Simon Hausmann  <hausmann@webkit.org>

        Build fix. Back out previous #include fix for PageGroup.h as it broke
        the Mac build due to forwarding headers.

        * page/PageGroup.h:

2008-04-18  Simon Hausmann  <hausmann@webkit.org>

        Build fix for Qt and gcc 4.3.

        * WebCore.pro: Added missing files and include paths, re-ordered
        the storage/ include path to avoid conflict of storage/LocalStorage.h
        with kjs/LocalStorage.h