@@ -1,3 +1,15 @@
+2008-04-18  Ariya Hidayat  <ariya.hidayat@trolltech.com>
+
+        Reviewed by Adam Roben.
+
+        https://bugs.webkit.org/show_bug.cgi?id=18477
+
+        No resize indication is shown when moving/hovering over the frame
+        border/splitter.
+
+        * page/EventHandler.cpp:
+        (WebCore::EventHandler::selectCursor):
+
 2008-04-18  Adam Roben  <aroben@apple.com>
 
         Windows build fix
